Fix z-index for footer

--- a/frontend/src/stylesheet/footer.scss
+++ b/frontend/src/stylesheet/footer.scss
@@ -10,6 +10,7 @@
     background-color: #173514;
     background-image: url("https://www.transparenttextures.com/patterns/shley-tree-1.png");
     box-shadow: 0 0 10px 10px black;
+    z-index: 5;
 
 
     .footer-header {
